force-app/main/default/objects/ssot__HlthcrPractitionerFacilityIdentifier__dlm/fields/ssot__HealthcarePractitionerFacilityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthcarePractitionerFacilityId__c</fullName>
    <label>Healthcare Practitioner Facility</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HealthcarePractitionerFacilityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>