force-app/main/default/objects/ssot__HlthcrPractitionerFacilityIdentifier__dlm/fields/ssot__IssuingAuthorityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__IssuingAuthorityId__c</fullName>
    <label>IssuingAuthority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IssuingAuthorityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>