force-app/main/default/objects/ssot__HlthcrPractitionerFacilityIdentifier__dlm/fields/ssot__rel_1716725807754_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716725807754_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HlthcrPractitionerFacilityIdentifier_rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>HlthcrPractitionerFacilityIdentifier_rel</relationshipLabel>
    <relationshipName>rel_1716725807754_end</relationshipName>
    <type>Lookup</type>
</CustomField>